--- a/deepshikha.html
+++ b/deepshikha.html
@@ -57,7 +57,7 @@
                         <img class="card-img-top" src="images/d1.jpeg" alt="Card image">
                         <div class="card-body">
                             <h2 class="card-title">Photo Spoiler <i class="far fa-smile-beam"> </i></h2>
-                            <h3 class="card-text">Achha khasa photo aa raha tha par kharab ho gaya tha 😂 because of the photo spoiler vandana🤦🏻‍♀️ kya kar sakte🤷‍♀️🤣🤣🤣🤣</h3>
+                            <h3 class="card-text">Achha khasa photo aa raha tha par kharab ho gaya tha 😂 because of the photo <b>spoiler vandana</b> 🤦🏻‍♀️ kya kar sakte🤷‍♀️🤣🤣🤣🤣</h3>
                         </div>
                     </div>
                 </div>
