--- a/about.html
+++ b/about.html
@@ -51,7 +51,9 @@
         </nav>
     </div>
     <div class="container">
-        <video src="images/b11.mp4" autoplay style="width: 100%;" loop></video>
+        <video src="images/b11.mp4" autoplay style="width: 100%; padding:10px;" loop></video>
+        <video src="images/g4.mp4" autoplay controls loop style="width:100%; padding:10px;"></video>
+        <video src="images/g5.mp4" controls loop style="width:100%; padding:10px;"></video>
     </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
