--- a/about.html
+++ b/about.html
@@ -52,6 +52,7 @@
     </div>
     <div class="container">
         <video src="images/b11.mp4" autoplay style="width: 100%; padding:10px;" loop></video>
+        <p class="alert alert-danger"> use earphones</p>
         <video src="images/g4.mp4" autoplay controls loop style="width:100%; padding:10px;"></video>
         <video src="images/g5.mp4" controls loop style="width:100%; padding:10px;"></video>
     </div>
