--- a/akash.html
+++ b/akash.html
@@ -50,7 +50,53 @@
         </nav>
     </div>
     <div class="container">
-    
+        <div class="row justify-content-around">
+            <div class="box col-md-5 col-lg-3 col-xl-2.5">
+                <div class="content">
+                    <div class="card">
+                        <img class="card-img-top" src="images/a1.jpg" alt="Card image">
+                        <div class="card-body">
+                            <h2 class="card-title">Photo Spoiler <i class="far fa-smile-beam"> </i></h2>
+                            <h3 class="card-text">Hum sabki first holi😊... Sabne ek hi colour se holi kheli thi😆..... Tere sath khelkar maja aaya tha.... Fir jabardasti photoshoot ho rha tha... 😂😂</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="box col-md-5 col-lg-3 col-xl-2.5">
+                <div class="content">
+                    <div class="card">
+                        <img class="card-img-top" src="images/a2.jpg" alt="Card image">
+                        <div class="card-body">
+                            <h2 class="card-title">Photo Spoiler <i class="far fa-smile-beam"> </i></h2>
+                            <h3 class="card-text">Class me hamesha masti karta hai.... Aur ghr jate time hame college ke lambe raste se ghuma ke le jata hai jabardasti😆😂.... Aur jabrdasti Frankie khane ke liye rukwa leta tha.... Fir hum waha khade hoke der tak baate karte hai.... 😁😆😂😂</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="box col-md-5 col-lg-3 col-xl-2.5">
+                <div class="content">
+                    <div class="card">
+                        <img class="card-img-top" src="images/a3.jpeg" alt="Card image">
+                        <div class="card-body">
+                            <h2 class="card-title">Photo Spoiler <i class="far fa-smile-beam"> </i></h2>
+                            <h3 class="card-text">Teeno sath me baith ke masti karte hai😁... Aur tu hamare kaan👂 bharta tha... Kaan hare bhare ho jate hai.... 😂😂</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="box col-md-5 col-lg-3 col-xl-2.5">
+                <div class="content">
+                    <div class="card">
+                        <img class="card-img-top" src="images/a4.jpeg" alt="Card image">
+                        <div class="card-body">
+                            <h2 class="card-title">Photo Spoiler <i class="far fa-smile-beam"> </i></h2>
+                            <h3 class="card-text">Hamara sabse uniqe game😂.... Aakhmicholi... Har baar teri sabse pehle baari aati hai😆... Tune mujhe kitna bhagaya hai isme <b> haramkhor... 😂😂</b></h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
