--- a/akash.html
+++ b/akash.html
@@ -56,7 +56,7 @@
                     <div class="card">
                         <img class="card-img-top" src="images/a1.jpg" alt="Card image">
                         <div class="card-body">
-                            <h2 class="card-title">Photo Spoiler <i class="far fa-smile-beam"> </i></h2>
+                            <h2 class="card-title">first holi😊...</h2>
                             <h3 class="card-text">Hum sabki first holi😊... Sabne ek hi colour se holi kheli thi😆..... Tere sath khelkar maja aaya tha.... Fir jabardasti photoshoot ho rha tha... 😂😂</h3>
                         </div>
                     </div>
@@ -67,7 +67,7 @@
                     <div class="card">
                         <img class="card-img-top" src="images/a2.jpg" alt="Card image">
                         <div class="card-body">
-                            <h2 class="card-title">Photo Spoiler <i class="far fa-smile-beam"> </i></h2>
+                            <h2 class="card-title">jabrdasti wali Frankie😁😆😂</h2>
                             <h3 class="card-text">Class me hamesha masti karta hai.... Aur ghr jate time hame college ke lambe raste se ghuma ke le jata hai jabardasti😆😂.... Aur jabrdasti Frankie khane ke liye rukwa leta tha.... Fir hum waha khade hoke der tak baate karte hai.... 😁😆😂😂</h3>
                         </div>
                     </div>
@@ -78,7 +78,7 @@
                     <div class="card">
                         <img class="card-img-top" src="images/a3.jpeg" alt="Card image">
                         <div class="card-body">
-                            <h2 class="card-title">Photo Spoiler <i class="far fa-smile-beam"> </i></h2>
+                            <h2 class="card-title">kaan👂 bharna </h2>
                             <h3 class="card-text">Teeno sath me baith ke masti karte hai😁... Aur tu hamare kaan👂 bharta tha... Kaan hare bhare ho jate hai.... 😂😂</h3>
                         </div>
                     </div>
@@ -89,7 +89,7 @@
                     <div class="card">
                         <img class="card-img-top" src="images/a4.jpeg" alt="Card image">
                         <div class="card-body">
-                            <h2 class="card-title">Photo Spoiler <i class="far fa-smile-beam"> </i></h2>
+                            <h2 class="card-title">Aakhmicholi...😂</h2>
                             <h3 class="card-text">Hamara sabse uniqe game😂.... Aakhmicholi... Har baar teri sabse pehle baari aati hai😆... Tune mujhe kitna bhagaya hai isme <b> haramkhor... 😂😂</b></h3>
                         </div>
                     </div>
