--- a/memories.html
+++ b/memories.html
@@ -49,6 +49,9 @@
     </div>
 <div class="container">
      <!-- model goes here -->
+     <div>
+        <video src="images/g3.mp4" controls loop autoplay style="padding: 10px; width:100%;"></video>
+    </div>
      <small style="color: white; margin: 0 10vh ;">you may click on these photos</small>
     <div class="modal1">
         <img src="images/m8.jpg" class=" img-thumbnail"data-toggle="modal" data-target="#myModal1">
@@ -227,10 +230,19 @@
                 </div>
             </div>
         </div>
+        <img src="images/m25.jpeg" class=" img-thumbnail"data-toggle="modal" data-target="#myModal17">
+        <div class="modal fade" id="myModal17" tabindex="-1" role="dialog" aria-labelledby="myModal-label" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <span  class="close" data-dismiss="modal" aria-label="Close" aria-hidden="true" >&times;</span>
+                        <img src="images/m25.jpeg" class="d-block w-100 img-fluid img-thumbnail" alt="logo">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div>
-        <video src="images/g3.mp4" controls loop autoplay style="padding: 10px; width:100%;"></video>
-    </div>
+
 </div>
 <!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
