--- a/bunty.html
+++ b/bunty.html
@@ -15,7 +15,7 @@
       <div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
             <!--tips: to change the nav placement use .fixed-top,.fixed-bottom,.sticky-top-->
-            <a class="navbar-brand" href="about.html"><small>Happy birthday <br> Pritom Parui </small></a>
+            <a class="navbar-brand" href="index.html"><small>Happy birthday <br> Pritom Parui </small></a>
             <!--<a class="navbar-brand" href="#">
                 <img src="..." class="d-inline-block align-top" width="30" height="30" alt="...">Happy birthday
             </a>-->
@@ -51,6 +51,10 @@
     </div>
     <!-- body goes here-->
     <div class="container">
+      <video src="images/b11.mp4" autoplay style="width: 100%; padding:10px;" loop></video>
+        <p class="alert alert-danger"> use earphones</p>
+        <video src="images/g4.mp4" autoplay controls loop style="width:100%; padding:10px;"></video>
+        <video src="images/g5.mp4" controls loop style="width:100%; padding:10px;"></video>
         <!-- our memories -->
         <div class="row justify-content-around">
               <div class="box col-md-5 col-lg-3 col-xl-2.5">
