--- a/vandana.html
+++ b/vandana.html
@@ -15,7 +15,7 @@
       <div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
             <!--tips: to change the nav placement use .fixed-top,.fixed-bottom,.sticky-top-->
-            <a class="navbar-brand" href="about.html"><small>Happy birthday <br> Pritom Parui </small></a>
+            <a class="navbar-brand" href="index.html"><small>Happy birthday <br> Pritom Parui </small></a>
             <!--<a class="navbar-brand" href="#">
                 <img src="..." class="d-inline-block align-top" width="30" height="30" alt="...">Happy birthday
             </a>-->
@@ -53,7 +53,7 @@
         <div class="row justify-content-around">
             <div class="box col-md-5 col-lg-3 col-xl-2.5">
                 <div class="content">
-                    <video src="images/v1.mp4" autoplay style="width: 100%" loop></video>
+                    <video src="images/v13.mp4" autoplay style="width: 100%" loop></video>
                 </div>
             </div>
             <div class="box col-md-5 col-lg-3 col-xl-2.5">
