--- a/deepshikha.html
+++ b/deepshikha.html
@@ -15,7 +15,7 @@
       <div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
             <!--tips: to change the nav placement use .fixed-top,.fixed-bottom,.sticky-top-->
-            <a class="navbar-brand" href="about.html"><small>Happy birthday <br> Pritom Parui </small></a>
+            <a class="navbar-brand" href="index.html"><small>Happy birthday <br> Pritom Parui </small></a>
             <!--<a class="navbar-brand" href="#">
                 <img src="..." class="d-inline-block align-top" width="30" height="30" alt="...">Happy birthday
             </a>-->
