some modification with video is done

--- a/bunty.html
+++ b/bunty.html
@@ -51,10 +51,10 @@
     </div>
     <!-- body goes here-->
     <div class="container">
-      <video src="images/b11.mp4" autoplay style="width: 100%; padding:10px;" loop></video>
+      <video src="images/b11.mp4" autoplay style="width: 100%;" loop></video>
         <p class="alert alert-danger"> use earphones</p>
-        <video src="images/g4.mp4" autoplay controls loop style="width:100%; padding:10px;"></video>
-        <video src="images/g5.mp4" controls loop style="width:100%; padding:10px;"></video>
+        <video src="images/g4.mp4" autoplay controls loop style="width:100%; "></video>
+        <video src="images/g5.mp4" controls loop style="width:100%; "></video>
         <!-- our memories -->
         <div class="row justify-content-around">
               <div class="box col-md-5 col-lg-3 col-xl-2.5">
