--- a/memories.html
+++ b/memories.html
@@ -50,7 +50,7 @@
 <div class="container">
      <!-- model goes here -->
      <div>
-        <video src="images/g3.mp4" controls loop autoplay style="padding: 10px; width:100%;"></video>
+        <video src="images/g3.mp4" controls loop autoplay style=" width:100%;"></video>
     </div>
      <small style="color: white; margin: 0 10vh ;">you may click on these photos</small>
     <div class="modal1">
